--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "angular": "~1.4.7",
     "Chart.js": "~1.0.2",
-    "angular-chart.js": "~0.8.5"
+    "angular-chart.js": "~0.8.5",
+    "angular-socket-io": "~0.7.0"
   }
 }
