--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "morgan": "^1.6.1",
     "cookie-parser": "^1.3.3",
     "body-parser": "^1.13.3",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "socket.io": "^1.3.7"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
